# pion-old

./: Cargo.toml  rustfmt.toml
crates/pion/: Cargo.toml
crates/pion-common/: Cargo.toml
crates/pion-common/src/: arena.rs  lib.rs  slice_vec.rs
crates/pion-core/: Cargo.toml
crates/pion-core/src/: db.rs  distill.rs  elab.rs  env.rs  lib.rs  prim.rs  reporting.rs  semantics.rs  syntax.rs
crates/pion-core/src/elab/: expr.rs  match.rs  pat.rs  unify.rs
crates/pion-core/src/elab/match/: compile.rs  coverage.rs
crates/pion-source/: Cargo.toml
crates/pion-source/src/: db.rs  input.rs  lib.rs  location.rs
crates/pion-surface/: Cargo.toml
crates/pion-surface/src/: db.rs  grammar.lalrpop  lib.rs  pretty.rs  reporting.rs  syntax.rs  tokens.rs
crates/pion/src/: driver.rs  main.rs  source_tests.rs
doc/: roadmap.md
tests/elab/: prims.pion  prims.pion.snap
tests/elab/fun-app/: identity.pion
tests/elab/fun-lit/: synth-poly-ident.pion
tests/elab/fun-type/: arrow-synth.pion.snap  synth.pion  synth.pion.snap
tests/elab/let/: synth.pion
tests/elab/literals/: bool-lit.pion  bool-lit.pion.snap
tests/fail/fun-app/: head-not-fun.pion  head-not-fun.pion.snap  plicity-mismatch.pion  plicity-mismatch.pion.snap  too-many-args.pion  too-many-args.pion.snap
tests/fail/match/: duplicate-name.pion  duplicate-name.pion.snap  inexhaustive.pion  inexhaustive.pion.snap
tests/fail/name/: unbound-name.pion  unbound-name.pion.snap
tests/fail/record-lit/: duplicate-fields.pion.snap
tests/fail/record-type/: duplicate-fields.pion  duplicate-fields.pion.snap
tests/fail/tuple-lit/: check.pion  check.pion.snap
tests/succeed/: module.pion  module.pion.snap  pretty.pion  pretty.pion.snap  prims.pion  prims.pion.snap  stress.pion  stress.pion.snap
tests/succeed/fun-app/: identity.pion  identity.pion.snap
tests/succeed/fun-lit/: check.pion  check.pion.snap  synth-poly-ident.pion.snap  synth.pion  synth.pion.snap
tests/succeed/fun-type/: arrow-synth.pion  polynomial-identity.pion  polynomial-identity.pion.snap
tests/succeed/if-then-else/: check.pion  check.pion.snap  synth.pion  synth.pion.snap
tests/succeed/implicit-args/: generalize.pion  generalize.pion.snap  insert-args.pion  insert-args.pion.snap  specialize.pion  specialize.pion.snap
tests/succeed/let/: check.pion  check.pion.snap  synth.pion  synth.pion.snap
tests/succeed/literals/: bool-lit.pion  bool-lit.pion.snap  int-lit.pion  int-lit.pion.snap
tests/succeed/match/: bool.pion  bool.pion.snap  int.pion  int.pion.snap  named_default.pion  named_default.pion.snap  overlap.pion  overlap.pion.snap
tests/succeed/record-lit/: check-dependent.pion  check-dependent.pion.snap  synth.pion  synth.pion.snap
tests/succeed/record-patterns/: check-fun-lit-generic-pairs.pion  check-fun-lit-generic-pairs.pion.snap  fun-type-generic-pairs.pion  fun-type-generic-pairs.pion.snap  let-generic-pairs.pion  let-generic-pairs.pion.snap  let-pairs.pion  let-pairs.pion.snap  match-bool-pairs.pion  match-bool-pairs.pion.snap  match-generic-pairs.pion  match-generic-pairs.pion.snap  match-int-pairs.pion  match-int-pairs.pion.snap  synth-fun-lit-generic-pairs.pion  synth-fun-lit-generic-pairs.pion.snap
tests/succeed/record-type/: synth-dependent.pion  synth-dependent.pion.snap  synth-pair.pion  synth-pair.pion.snap  synth-singleton.pion  synth-singleton.pion.snap
tests/succeed/tuple-lit/: check.pion  check.pion.snap  generic-pair.pion  generic-pair.pion.snap  generic-triple.pion  generic-triple.pion.snap  synth.pion  synth.pion.snap
