[package]
name                    = "pion-core"
version                 = { workspace = true }
edition                 = { workspace = true }
rust-version            = { workspace = true }

[dependencies]
pion-common             = { path = "../pion-common" }
pion-source             = { path = "../pion-source" }
pion-surface            = { path = "../pion-surface" }

bumpalo                 = { workspace = true }
codespan-reporting      = { workspace = true }
ouroboros               = { workspace = true }
salsa                   = { workspace = true }

either                  = { version = "1.8.1" }
internal-iterator       = { version = "0.2.1" }
