[package]
name = "pion"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.3", features = ["derive"] }
codespan-reporting = "0.11.1"
pion-core = { version = "0.1.0", path = "../pion-core" }
pion-source = { version = "0.1.0", path = "../pion-source" }
pion-surface = { version = "0.1.0", path = "../pion-surface" }
pretty = "0.11.3"
scoped-arena = "0.4.1"

[[test]]
name = "source_tests"
path = "src/source_tests.rs"
harness = false

[dev-dependencies]
expect-test = "1.4.0"
libtest-mimic = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
shlex = "1.1.0"
subst = "0.2.2"
toml = "0.7.2"
walkdir = "2.3.2"
