[package]
name                    = "pion"
version                 = { workspace = true }
edition                 = { workspace = true }
rust-version            = { workspace = true }

[dependencies]
pion-core               = { path = "../pion-core" }
pion-source             = { path = "../pion-source" }
pion-surface            = { path = "../pion-surface" }

bumpalo                 = { workspace = true }
codespan-reporting      = { workspace = true }
pretty                  = { workspace = true }

clap                    = { version = "4.3.0", features = ["derive"] }

[[test]]
name                    = "source_tests"
path                    = "src/source_tests.rs"
harness                 = false

[dev-dependencies]
basic-toml              = { version = "0.1.2" }
expect-test             = { version = "1.4.0" }
libtest-mimic           = { version = "0.6.0" }
serde                   = { version = "1.0.163", features = ["derive"] }
walkdir                 = { version = "2.3.2" }
